[project]
name = "sinica-practice"
version = "0.1.0"
description = "Just a practice demo for Sinica internship."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromo>=0.9.0",
    "numpy>=2.3.2",
    "packaging>=25.0",
    "polars>=1.32.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sp"]

